fixing dark mode headings

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -373,3 +373,7 @@ hr{
   flex-direction: column;
   border-radius: 6px;
 }
+
+html.dark :is(h2, h3, h4, h5) {
+  color: white !important;
+}
